ISAICP-2906: Fix featured button on tablet

--- a/web/themes/joinup/prototype/sass/components/_featured.sass
+++ b/web/themes/joinup/prototype/sass/components/_featured.sass
@@ -71,7 +71,7 @@
 
 .featured__stats
   display: inline-block
-  margin-bottom: 20px
+  margin-bottom: 10px
   text-align: left
   vertical-align: middle
   background-color: #fff
@@ -97,9 +97,6 @@
 
 .featured__form-button
   display: inline-block
-  margin: 20px 10px 0
-
-.releases-overview
   margin: 10px
 
 // Modifiers
